added footer and changed header to enlarge background image

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
 </head>
 <body>
 	<header>
+        <div class="quickContact">
+            1234 ABC Street<br>
+            Cincinnati, OH 45202<br>
+            000.123.4567
+        </div>
 		<h1 class="heading-primary">
             <span class="heading-primary--main">TOUR THE LIGHTS</span>
             <span class="heading-primary--sub">Your full-service lighthouse tour and travel specialists</span>
@@ -200,10 +205,33 @@
                 </div>  <!-- card__face -->
             </div>  <!-- card -->                
         </div>  <!-- planbox -->
-
         <div class="btn btn-tour">See back of cards for additional details!</div> 
-
     </section>
+    <section class="contacts">
+		<div class="contacts__sidebar contacts__sidebar1">
+			<img src="../img/lightatnight.jpg" class="inner" alt="nightlight">
+			Lighting the way to your next vacation
+		</div>
+		<div class="contacts__sidebar contacts__sidebar2">
+        <span>Tour the Lights</span><br>        
+		1234 ABC Street<br>
+		Cincinnati, OH  45202
+		<p>Phone: 000.123.4567<br>			
+			Email: janet_TourTheLights@gmail.com
+		</div>
+		<div class="contacts__sidebar contacts__sidebar2">
+		<span>Hours</span><br>
+		<p>Monday – Friday: 10:00am – 5:30pm<br>
+			Saturday: 10:00am – 2:00pm<br>
+			Sunday: Closed<br>
+			After hours by appointment</p>
+		</div>
+	</section>
+
+	<footer class = "disclaimer">		
+        <p><strong>DISCLAIMER:&nbsp; </strong>  Tour the Lights is a fictitious travel agency created solely for the purpose of showcasing my web development skills.<br>  Any resemblance to a real travel agency is purely coincidental.</p>        
+	</footer>   
+    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="js/jquery.waypoints.min.js"></script>    
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAZHc4cXVNBiH27p1-g93-szv63pzTOKHo"></script>     
