added contact info to header

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="quickContact">
             1234 ABC Street<br>
             Cincinnati, OH 45202<br>
-            000.123.4567
+            (513) 123-4567
         </div>
 		<h1 class="heading-primary">
             <span class="heading-primary--main">TOUR THE LIGHTS</span>
@@ -210,17 +210,20 @@
     <section class="contacts">
 		<div class="contacts__sidebar contacts__sidebar1">
 			<img src="../img/lightatnight.jpg" class="inner" alt="nightlight">
-			Lighting the way to your next vacation
+			<p>Lighting the way to your next vacation</p>
 		</div>
 		<div class="contacts__sidebar contacts__sidebar2">
-        <span>Tour the Lights</span><br>        
+        <!-- <span>Tour the Lights</span><br> -->
+        <span>Tour the Lights</span>
+        <hr>
 		1234 ABC Street<br>
 		Cincinnati, OH  45202
-		<p>Phone: 000.123.4567<br>			
+		<p>Phone: (513) 123-4567<br>			
 			Email: janet_TourTheLights@gmail.com
 		</div>
 		<div class="contacts__sidebar contacts__sidebar2">
-		<span>Hours</span><br>
+        <span>Hours</span>
+        <hr>
 		<p>Monday – Friday: 10:00am – 5:30pm<br>
 			Saturday: 10:00am – 2:00pm<br>
 			Sunday: Closed<br>
