added destinations page

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <ul class = "navigation__list">
                 <li class = "navigation__item"><a href="index.html" class = "navigation__link navigation__current-item" title="Tour the Lights">Home</a></li>
                 <li class = "navigation__item"><a href="lighthouseAboutUs.html" class = "navigation__link" title="About Us|Tour the Lights">About Us</a></li>
-                <li class = "navigation__item"><a href="lighthouseTours.html" class = "navigation__link" title="Destinations|Tour the Lights">Destinations</a></li>	
+                <li class = "navigation__item"><a href="destination.html" class = "navigation__link" title="Destinations|Tour the Lights">Destinations</a></li>	
                 <!-- <li class = "navigation__item"><a href="lighthouseEvents.html" class = "navigation__link" title="Events|Tour the Lights">Events</a></li> -->
                 <li class = "navigation__item"><a href="lighthouseContacts.html" class = "navigation__link" title="Contact Us|Tour the Lights">Contact Us</a></li>
             </ul>
@@ -109,7 +109,7 @@
             <a href= "https://www.nps.gov/pore/planyourvisit/lighthouse.htm" target="_blank"><img srcset="img/PointReyesSmall.jpg 300w, img/PointReyesLarge.jpg 1000w" sizes="(max-width: 900px) 20vw, (max-width: 600px) 30vw, 300px" alt="Photo 1" class="advPhotos__photo advPhotos__photo--p1"></a>     
             <a href= "http://www.pensacolalighthouse.org/index/tours/ghost-hunt" target="_blank"><img srcset="img/HauntedSmall.jpg 300w, img/HauntedLarge.jpg 1000w" sizes="(max-width: 900px) 20vw, (max-width: 600px) 30vw, 300px" alt="Photo 2" class="advPhotos__photo advPhotos__photo--p2"></a>
 
-            <a href= "https://www.nps.gov/calo/planyourvisit/lighthouse-climbs.htm" target="_blank"><img srcset="img/CapeLookoutSmall.jpg300w, img/CapeLookoutSmall.jpg 1000w" sizes="(max-width: 900px) 20vw, (max-width: 600px) 30vw, 300px" alt="Photo 3" class="advPhotos__photo advPhotos__photo--p3"></a>
+            <a href= "https://www.nps.gov/calo/planyourvisit/lighthouse-climbs.htm" target="_blank"><img srcset="img/CapeLookoutSmall.jpg300w, img/CapeLookoutLarge.jpg 1000w" sizes="(max-width: 900px) 20vw, (max-width: 600px) 30vw, 300px" alt="Photo 3" class="advPhotos__photo advPhotos__photo--p3"></a>
         </div>        
     </section>   
 
@@ -239,7 +239,7 @@
         <ul class="footer__nav"> 
                 <li class = "nav__item"><a href="index.html" class = "nav__link" title="Tour the Lights">Home</a></li>
                 <li class = "nav__item"><a href="lighthouseAboutUs.html" class = "nav__link2" title="About Us|Tour the Lights">About Us</a></li>
-                <li class = "nav__item"><a href="lighthouseTours.html" class = "nav__link3" title="Destinations|Tour the Lights">Destinations</a></li>	
+                <li class = "nav__item"><a href="destination.html" class = "nav__link3" title="Destinations|Tour the Lights">Destinations</a></li>	
                 <!-- <li class = "navigation__item"><a href="lighthouseEvents.html" class = "navigation__link" title="Events|Tour the Lights">Events</a></li> -->
                 <li class = "nav__item"><a href="lighthouseContacts.html" class = "nav__link4" title="Contact Us|Tour the Lights">Contact Us</a></li>          
         </ul>   
