--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
 	<title>Tour The Lights > Home </title>
 </head>
 <body>
-	<header>
-        <div class="quickContact">
+	<header class = "header header__home">
+        <div class="quickContact quickContact__home">
             1234 ABC Street<br>
             Cincinnati, OH 45202<br>
             (513) 123-4567
         </div>
-		<h1 class="heading-primary">
+		<h1 class="heading-primary heading-primary--home">
             <span class="heading-primary--main">TOUR THE LIGHTS</span>
             <span class="heading-primary--sub">Your full-service lighthouse tour and travel specialists</span>
         </h1>         
-        <nav class="navigation">
+        <nav class="navigation navigation__home">
             <ul class = "navigation__list">
                 <li class = "navigation__item"><a href="index.html" class = "navigation__link navigation__current-item" title="Tour the Lights">Home</a></li>
                 <li class = "navigation__item"><a href="lighthouseAboutUs.html" class = "navigation__link" title="About Us|Tour the Lights">About Us</a></li>
@@ -243,7 +243,7 @@
                 <!-- <li class = "navigation__item"><a href="lighthouseEvents.html" class = "navigation__link" title="Events|Tour the Lights">Events</a></li> -->
                 <li class = "nav__item"><a href="lighthouseContacts.html" class = "nav__link4" title="Contact Us|Tour the Lights">Contact Us</a></li>          
         </ul>   
-        <div class="footer__copyright">Tour the Lights &copy; 2018 Copyright.  No rights reserved.</div>
+        <div class="footer__copyright">Tour the Lights &copy; 2018 Copyright - No rights reserved.</div>
         
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
